--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
-    "mysql2": "^3.6.3"
+    "mysql2": "^3.6.3",
+    "nodemon": "^3.0.1"
   }
 }
